Eevee Next: Viewport Pixel sizes other than 1x doesn't take overscan into account #124961

Closed
opened 2024-07-18 07:28:20 +02:00 by Aspirata · 4 comments

System Information
Operating system: Windows-10-10.0.22635-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 555.99

Blender Version
Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-07-16 21:27, hash: b8eb87258348
Worked: In the previous 4.3 commit

Short description of error
For some reason my model looks small on eevee next

image

Exact steps for others to reproduce the error
Just open my .blend file

Or

  1. Open any file and set the render engine to EEVEE
  2. Enter the rendered viewport.
  3. Change the pixel size Render Properties -> Performance -> Viewport -> Pixel Size to something larger than 1x. You should see the issue.
**System Information** Operating system: Windows-10-10.0.22635-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 555.99 **Blender Version** Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-07-16 21:27, hash: `b8eb87258348` Worked: In the previous 4.3 commit **Short description of error** For some reason my model looks small on eevee next <img width="617" alt="image" src="attachments/67b5a2fb-f503-44e1-a8d6-261bc8d8984a"> **Exact steps for others to reproduce the error** Just open my .blend file Or 1. Open any file and set the render engine to EEVEE 2. Enter the rendered viewport. 3. Change the pixel size `Render Properties -> Performance -> Viewport -> Pixel Size` to something larger than 1x. You should see the issue.
Aspirata added the
Type
Report
Severity
Normal
Status
Needs Triage
labels 2024-07-18 07:28:21 +02:00
Member

I can confirm this issue. I will look into bisecting it.

System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 556.12
Blender version: 4.3.0 Alpha, branch: main, commit date: 2024-07-17 23:28, hash: 0b70a9edc56b

I can confirm this issue. I will look into bisecting it. **System Information** Operating system: Windows-10-10.0.22631-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 556.12 Blender version: 4.3.0 Alpha, branch: main, commit date: 2024-07-17 23:28, hash: `0b70a9edc56b`
Alaska changed title from Eevee Next: Small models to Blender 4.3 Eevee Next: Viewport Pixel sizes other than 1x render improperly 2024-07-18 07:48:01 +02:00
Member

Caused by c72a1d698e
CC @fclem

Caused by c72a1d698ed1af2e68d78ce809440530f2c3ac36 CC @fclem
Bart van der Braak added
Type
Bug
and removed
Type
Report
labels 2024-08-14 12:56:09 +02:00
Member

When disabling the overscan the image draws correctly. Seems to be an oversight during refactoring. Is also an issue in Blender 4.2.
Seems when pixel size != 1 the overscan is off. The difference is the same for any number so might indicate a missing *2 somewhere.

When disabling the overscan the image draws correctly. Seems to be an oversight during refactoring. Is also an issue in Blender 4.2. Seems when pixel size != 1 the overscan is off. The difference is the same for any number so might indicate a missing *2 somewhere.
Jeroen Bakker changed title from Blender 4.3 Eevee Next: Viewport Pixel sizes other than 1x render improperly to Blender 4.3 Eevee Next: Viewport Pixel sizes other than 1x doesn't take overscan into account 2024-08-15 15:21:53 +02:00
Jeroen Bakker changed title from Blender 4.3 Eevee Next: Viewport Pixel sizes other than 1x doesn't take overscan into account to Eevee Next: Viewport Pixel sizes other than 1x doesn't take overscan into account 2024-08-15 15:23:59 +02:00
Jeroen Bakker added this to the Viewport & EEVEE project 2024-08-15 15:24:21 +02:00
Member

The issue doesn't seem to be the film shader as the FilmSample src.texel seems to be correct.
So putting my attention to the view matrix that is created in this case.

    BKE_camera_params_compute_viewplane(&params, UNPACK2(display_extent), 1.0f, 1.0f);

    BKE_camera_params_crop_viewplane(&params.viewplane, UNPACK2(display_extent), &film_rect);

    RE_GetWindowMatrixWithOverscan(params.is_ortho,
                                   params.clip_start,
                                   params.clip_end,
                                   params.viewplane,
                                   overscan_,
                                   data.winmat.ptr()); 

Here the overscan doesn't seem to be adjusted with the pixel scaling but with the cropped viewplane. Will double check with Clement before patching.

The issue doesn't seem to be the film shader as the FilmSample src.texel seems to be correct. So putting my attention to the view matrix that is created in this case. ``` BKE_camera_params_compute_viewplane(&params, UNPACK2(display_extent), 1.0f, 1.0f); BKE_camera_params_crop_viewplane(&params.viewplane, UNPACK2(display_extent), &film_rect); RE_GetWindowMatrixWithOverscan(params.is_ortho, params.clip_start, params.clip_end, params.viewplane, overscan_, data.winmat.ptr()); ``` Here the overscan doesn't seem to be adjusted with the pixel scaling but with the cropped viewplane. Will double check with Clement before patching.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-08-19 12:32:43 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#124961
No description provided.