Fix: EEVEE: Broken overscan with pixel size greater than 1

Stupid sign error.

Fix #124961